# Koncowy-projekt

Final_boss_jinp-main/: README.md
Final_boss_jinp-main/Projekt_Menedzer/: BazowySzyfrator.h  BazowyWalidator.h  CMakeLists.txt  MenedzerHasel.cpp  MenedzerHasel.h  SzyfratorXOR.cpp  SzyfratorXOR.h  WalidatorSily.cpp  WalidatorSily.h  WpisHasla.h  main.cpp
